--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     padding: 0;
 }
 body {
-     display: center;
+     display: flex;
      justify-content: center;
      align-items: center;
      width: 100vh;
