--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    background: linear-gradient(var(--bg1), var(--bg2));
+/*     background: linear-gradient(var(--bg1), var(--bg2)); */
+    background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); 
     transition: 0.3s;
     overflow: hidden;
 }
