--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ body {
     width: 350px;
     height: 450px;
     border-radius: 10px;
-    background: linear-gradient(var(--bg1), var(--bg2));
+/*     background: linear-gradient(var(--bg1), var(--bg2)); */
+    background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); 
 }
 .container img {
     width: 200px;
